[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["Khalid Elborai <elboraikhalid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
